--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Clase 4</string>
-    <string name="hello_world">Hola mundo</string>
-    <string name="contador">Contador</string>
+    <string name="app_name">Lab 2</string>
+    <string name="title_activity_the_game_actitvity">TheGameActitvity</string>
+    <string name="title_activity_my_game">MyGameActivity</string>
 </resources>
